--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-pandas
-obonet
+pandas==1.5.2
+obonet==0.3.0
 tqdm
-networkx
+networkx==2.8.3
 itertools
-statannotations
-rdkit
-numpy
-seaborn
+statannotations==0.5.0
+rdkit==2022.9.1
+numpy==1.1.0
+seaborn==0.11.0
 matplotlib_venn
 pygal_maps_world
 cairosvg
-ptitprince
+ptitprince==0.2.6
